# pomo_timer

./: .gitignore  Cargo.toml  README.md  build.sh  help_message.txt  install.sh
src/: commands.rs  help_message.txt  main.rs  tests.rs
