[package]
name = "pomo"
version = "1.0.1"
edition = "2021"
rust-version = "1.75.0"
authors = ["Jamie Gibney <jamiegibneyuk@gmail.com>"]
description = "Basic Pomodoro timer for the command line."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
